# ind320ioeftedal

./: .cache.sqlite  .gitignore  LICENSE  README.md  Snow_drift.py  dummy.py  flake.nix  jupiter.ipynb  mongodb.py  plot.py  pyproject.toml  read.py  requirements.txt  streamlit_app.py  table.py  utils.py
jupiter/: .cache.sqlite  jupiter.ipynb  jupiter_CA1.ipynb  jupiter_CA2.ipynb  jupiter_CA3.ipynb  jupiter_CA4.ipynb
pages/: dummy.py  elhubapi.py  home.py  map.py  new_A.py  new_B.py  plot.py  sarimax.py  table.py
