[project]
name = "ind320ioeftedal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "cassandra-driver>=3.29.2",
    "faker>=37.11.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
    "vega-datasets>=0.9.0",
    "watchdog>=6.0.0",
]
