[project]
name = "ind320ioeftedal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "cache>=1.0.3",
    "cassandra-driver>=3.29.2",
    "faker>=37.11.0",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pymongo[srv]==3.12",
    "pyspark==3.5.1",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "vega-datasets>=0.9.0",
    "watchdog>=6.0.0",
]
